<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main_menuContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:layout_gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_main_bottom"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_bottomMenu_saiji"
            style="@style/ButtomMenuItemLayout" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imgv_bottomMenu_saiji"
                    style="@style/ButtomMenuImgv"
                    android:src="@drawable/dibu_saiji_selector" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_bottomMenu_saiji"
                    style="@style/ButtomMenuTv"
                    android:text="@string/dibu_daohang_saiji" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottomMenu_qiudui"
            style="@style/ButtomMenuItemLayout" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imgv_bottomMenu_qiudui"
                    style="@style/ButtomMenuImgv"
                    android:src="@drawable/dibu_qiudui_selector" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_bottomMenu_qiudui"
                    style="@style/ButtomMenuTv"
                    android:text="@string/dibu_daohang_qiudui" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottomMenu_saishi"
            style="@style/ButtomMenuItemLayout" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imgv_bottomMenu_saishi"
                    style="@style/ButtomMenuImgv"
                    android:src="@drawable/dibu_saishi_selector" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_bottomMenu_saishi"
                    style="@style/ButtomMenuTv"
                    android:text="@string/dibu_daohang_saishi"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottomMenu_me"
            style="@style/ButtomMenuItemLayout" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imgv_bottomMenu_paihang"
                    style="@style/ButtomMenuImgv"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/dibu_me_selector" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tv_bottomMenu_me"
                    style="@style/ButtomMenuTv"
                    android:text="@string/dibu_daohang_paihang" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
