<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="赛事信息"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1."
                android:gravity="center"
                android:text="赛季 :"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_add_saiji"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:entries="@array/saiji"
                android:prompt="@string/saiji"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/tv_add_jinjie"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="进阶 :"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_add_xiaozu"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:entries="@array/zu"
                android:prompt="@string/xiaozu"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1."
                android:gravity="center"
                android:text="轮次 :"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_add_lunci"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:entries="@array/lunci"
                android:prompt="@string/lunci"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="场数 :"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_add_changshu"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:entries="@array/chang"
                android:prompt="@string/changshu"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="场地 :"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp" />

            <RadioGroup
                android:id="@+id/rp_group"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_changdi_tianjingchang"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="田径场"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/rb_changdi_xiaochang"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="小场"
                    android:textSize="18dp" />


            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_saishi_team1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/football_jisuanji" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/sp_add_saishi_team1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:entries="@array/footBallQiuDui"
                        android:prompt="@string/geyuandui"
                        android:spinnerMode="dialog" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/vs" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_saishi_team2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/football_jisuanji" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/sp_add_saishi_team2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:entries="@array/footBallQiuDui"
                        android:prompt="@string/geyuandui"
                        android:spinnerMode="dialog" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="请选择赛事比赛时间"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp" />

        <DatePicker
            android:id="@+id/dp_add_saishi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:calendarViewShown="true"
            android:spinnersShown="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >


            </LinearLayout>

            <TimePicker
                android:id="@+id/tp_add_saishi"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:numbersTextColor="@color/colorPrimary"

                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >


            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_showtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="22dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="得分"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/tv_add_team1_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:text="计算机"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/tv_add_team1_score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom"
                android:hint="0"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/grey"
                android:textSize="60dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text=":"
                android:textColor="@color/colorPrimary"
                android:textSize="80dp" />

            <EditText
                android:id="@+id/tv_add_team2_score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom"
                android:hint="0"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/grey"
                android:textSize="60dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="得分"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/tv_add_team2_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:text="计算机"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="主裁判 : "
                android:textColor="@color/colorPrimary"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/et_add_saishi_zhucainame"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:entries="@array/caipan"
                android:hint="请输入裁判名"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="边裁判"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/et_add_saishi_biancai1name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/caipan"
                android:hint="请输入裁判名" />

            <EditText
                android:id="@+id/et_add_saishi_biancai2name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/caipan"
                android:hint="请输入裁判名" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_add_saishi_tijiao"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/yuan_button"
            android:text="提交"
            android:textSize="25dp" />

    </LinearLayout>


</ScrollView>